--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,14 @@ services:
     ports:
       - "3000:3000"
     environment:
-      REACT_APP_API_URL: http://localhost:8000
-      REACT_APP_KEYCLOAK_URL: http://localhost:8080
+      REACT_APP_API_URL: http://backend:8000
+      REACT_APP_KEYCLOAK_URL: http://keycloak:8080
       REACT_APP_KEYCLOAK_REALM: reports-realm
       REACT_APP_KEYCLOAK_CLIENT_ID: reports-frontend
+  backend:
+    build: ./API/backend
+    ports:
+      - "8000:8000"
+    container_name: backend
+    env_file:
+      - API/backend/backend.env
